force-app/main/default/objects/Service_Agreement__c/fields/Account_Dealer_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Dealer_Group__c</fullName>
    <formula>Service_Location__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Dealer Group</label>
    <type>Text</type>
</CustomField>