force-app/main/default/objects/Service_Agreement__c/fields/Account_Dealer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Dealer_Group_Name__c</fullName>
    <label>Account Dealer Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>