force-app/main/default/objects/Service_Agreement__c/fields/Account_Manager_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Text__c</fullName>
    <label>Account Manager (Text)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>