force-app/main/default/objects/Service_Agreement__c/fields/Accounts_Payable_Contact__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Payable Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Agreements (Accounts Payable Contact)</relationshipLabel>
    <relationshipName>Service_Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>