force-app/main/default/objects/Service_Agreement__c/fields/Accounts_Payable_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Email__c</fullName>
    <label>Accounts Payable Email</label>
    <type>Email</type>
</CustomField>