force-app/main/default/objects/Service_Agreement__c/fields/Accounts_Payable_Phone__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Phone__c</fullName>
    <label>Accounts Payable Phone Number</label>
    <type>Phone</type>
</CustomField>