force-app/main/default/objects/Service_Agreement__c/fields/Acitive_Audit_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Acitive_Audit_User_Phone__c</fullName>
    <label>Acitive Audit User Phone</label>
    <type>Phone</type>
</CustomField>