force-app/main/default/objects/Service_Agreement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CallRevu360 Active Flag</description>
    <inlineHelpText>CallRevu360 Active Flag</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>