force-app/main/default/objects/Service_Agreement__c/fields/Active_Tracking_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Tracking_Product__c</fullName>
    <label>Active Tracking Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>