force-app/main/default/objects/Service_Agreement__c/fields/Ad_Sources_Created_Port_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Ad_Sources_Created_Port_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Sources Created/ Port Submitted</label>
    <type>Checkbox</type>
</CustomField>