force-app/main/default/objects/Service_Agreement__c/fields/Ad_Sources_Received_LOA_Received__c.field-meta.xml
<CustomField>
    <fullName>Ad_Sources_Received_LOA_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Sources Received/ LOA Received</label>
    <type>Checkbox</type>
</CustomField>