force-app/main/default/objects/Service_Agreement__c/fields/Additional_Impact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Impact_Notes__c</fullName>
    <label>Additional Impact Notes</label>
    <type>TextArea</type>
</CustomField>