force-app/main/default/objects/Service_Agreement__c/fields/Allow_Ad_Source_Edits__c.field-meta.xml
<CustomField>
    <fullName>Allow_Ad_Source_Edits__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box allows the Ad Sources to Be updated.  Uncheck these if you are active and do not want users to change them in Salesforce.  This is set to allow edits on new Service Agreements.</inlineHelpText>
    <label>Allow Ad Source Edits</label>
    <type>Checkbox</type>
</CustomField>