force-app/main/default/objects/Service_Agreement__c/fields/AP_Updated_from_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>AP_Updated_from_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP Updated from Enrollment</label>
    <type>Checkbox</type>
</CustomField>