force-app/main/default/objects/Service_Agreement__c/fields/Audit_Active_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Audit_Active_User_Email__c</fullName>
    <label>Audit Active User Email</label>
    <type>Email</type>
</CustomField>