force-app/main/default/objects/Service_Agreement__c/fields/Audit_Active_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Audit_Active_User_ID__c</fullName>
    <label>Audit Acitve User ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>