force-app/main/default/objects/Service_Agreement__c/fields/Audit_Active_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Audit_Active_User_Phone__c</fullName>
    <label>Audit Active User Phone</label>
    <type>Phone</type>
</CustomField>