force-app/main/default/objects/Service_Agreement__c/fields/Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Code__c</fullName>
    <label>Authorization Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>