force-app/main/default/objects/Service_Agreement__c/fields/Authorization_Contact__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorization Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CallRevu_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>