force-app/main/default/objects/Service_Agreement__c/fields/Authorization_Contact_PW_Reset__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Contact_PW_Reset__c</fullName>
    <label>Authorization Contact PW Reset</label>
    <length>100</length>
    <type>Text</type>
</CustomField>