force-app/main/default/objects/Service_Agreement__c/fields/Auto_ID_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_ID_Account_Number__c</fullName>
    <label>Auto ID Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>