force-app/main/default/objects/Service_Agreement__c/fields/Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CallRevu_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>