force-app/main/default/objects/Service_Agreement__c/fields/Bill_To_Share_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Share_Fixed_Amount__c</fullName>
    <label>Bill To Share Fixed Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>