force-app/main/default/objects/Service_Agreement__c/fields/Bill_To_Share_Fixed_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Share_Fixed_Frequency__c</fullName>
    <label>Bill To Share Fixed Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>