force-app/main/default/objects/Service_Agreement__c/fields/Bill_to_Share_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Share_Percentage__c</fullName>
    <label>Bill-to Share Percentage</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>