force-app/main/default/objects/Service_Agreement__c/fields/Billing_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Agreement_ID__c</fullName>
    <label>Billing Agreement ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>