force-app/main/default/objects/Service_Agreement__c/fields/Billing_Line_Item_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Line_Item_End_Date__c</fullName>
    <inlineHelpText>Used from Cancellation Cases. Automated.</inlineHelpText>
    <label>Billing Line Item End Date</label>
    <type>DateTime</type>
</CustomField>