force-app/main/default/objects/Service_Agreement__c/fields/Call_Revu_360_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Call_Revu_360_Company_Phone__c</fullName>
    <label>Call Revu 360 Company Phone</label>
    <type>Phone</type>
</CustomField>