force-app/main/default/objects/Service_Agreement__c/fields/Call_Source_Active__c.field-meta.xml
<CustomField>
    <fullName>Call_Source_Active__c</fullName>
    <formula>if (Ispickval( CallSource_Account_Status__c ,&quot;Active&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Source Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>