force-app/main/default/objects/Service_Agreement__c/fields/Call_Tracking_Login__c.field-meta.xml
<CustomField>
    <fullName>Call_Tracking_Login__c</fullName>
    <label>Call Tracking Login</label>
    <length>30</length>
    <type>Text</type>
</CustomField>