force-app/main/default/objects/Service_Agreement__c/fields/Call_Tracking_Password__c.field-meta.xml
<CustomField>
    <fullName>Call_Tracking_Password__c</fullName>
    <label>Call Tracking Password</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>