force-app/main/default/objects/Service_Agreement__c/fields/CallRevu360_Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>CallRevu360_Billing_Name__c</fullName>
    <label>CallRevu360 Billing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>