force-app/main/default/objects/Service_Agreement__c/fields/CallRevu360_Company_Country__c.field-meta.xml
<CustomField>
    <fullName>CallRevu360_Company_Country__c</fullName>
    <label>CallRevu360 Company Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>