force-app/main/default/objects/Service_Agreement__c/fields/CallRevu360_Contact__c.field-meta.xml
<CustomField>
    <fullName>CallRevu360_Contact__c</fullName>
    <label>CallRevu360 Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>