force-app/main/default/objects/Service_Agreement__c/fields/CallRevu360_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>CallRevu360_Last_Update__c</fullName>
    <label>CallRevu360 Last Update</label>
    <type>Date</type>
</CustomField>