force-app/main/default/objects/Service_Agreement__c/fields/CallRevu360_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>CallRevu360_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CallRevu360 Parent Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Agreement__c.Is_CallRevu360_Parent_Account__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Service Agreements</relationshipLabel>
    <relationshipName>Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>