force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_360_Company_City__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_360_Company_City__c</fullName>
    <label>CallRevu 360 Company City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>