force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_360_Company_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_360_Company_Contact_2__c</fullName>
    <label>CallRevu 360 Company Contact 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>