force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_360_Company_Contact_2_Email__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_360_Company_Contact_2_Email__c</fullName>
    <label>CallRevu 360 Company Contact 2 Email</label>
    <type>Email</type>
</CustomField>