force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_360_Company_State__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_360_Company_State__c</fullName>
    <label>CallRevu 360 Company State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>