force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_360_Company_Street__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_360_Company_Street__c</fullName>
    <label>CallRevu 360 Company Street</label>
    <type>TextArea</type>
</CustomField>