force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_360_Company_Zip__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_360_Company_Zip__c</fullName>
    <label>CallRevu 360 Company Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>