force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_360_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_360_Contact_Email__c</fullName>
    <label>CallRevu 360 Contact Email</label>
    <type>Email</type>
</CustomField>