force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Account_Contract_GUID__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Account_Contract_GUID__c</fullName>
    <externalId>true</externalId>
    <label>CallRevu Account Contract GUID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>