force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Account_ID__c</fullName>
    <label>CallRevu Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>