force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Account_Name__c</fullName>
    <label>CallRevu Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>