force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Account_Status__c</fullName>
    <label>CallRevu Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>