force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Account_Type__c</fullName>
    <label>CallRevu Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tracking</fullName>
            </value>
            <value>
                <fullName>Transcription</fullName>
                <default>true</default>
                <label>Transcription</label>
            </value>
            <value>
                <fullName>Tracking &amp; Transcription</fullName>
            </value>
            <value>
                <fullName>Monitoring Package</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Transcription- Sales Only</fullName>
            </value>
            <value>
                <fullName>Temporary Downgrade to Tracking</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>