force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Account_Update__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Account_Update__c</fullName>
    <label>CallRevu Account Update</label>
    <type>Date</type>
</CustomField>