force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Active_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Active_End_Date__c</fullName>
    <label>CallRevu Active End Date</label>
    <type>Date</type>
</CustomField>