force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Parent_Account_ID__c</fullName>
    <formula>if(isblank(CallRevu_Account_Parent_Number__c),&quot;100500100&quot;,CallRevu_Account_Parent_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CallRevu360 Parent Account ID</label>
    <type>Text</type>
</CustomField>