force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Platform__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Platform__c</fullName>
    <label>CallRevu Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CI Beta Customer</fullName>
            </value>
            <value>
                <fullName>CRClient</fullName>
            </value>
            <value>
                <fullName>CI Base</fullName>
            </value>
            <value>
                <fullName>CI Tracking</fullName>
            </value>
            <value>
                <fullName>CI Tracking Advanced</fullName>
            </value>
            <value>
                <fullName>CI</fullName>
                <isActive>false</isActive>
                <label>CI</label>
            </value>
            <value>
                <fullName>CallRevu Classic</fullName>
                <isActive>false</isActive>
                <label>CallRevu Classic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>