force-app/main/default/objects/Service_Agreement__c/fields/CallRevu_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Salesperson__c</fullName>
    <label>CallRevu Salesperson</label>
    <length>50</length>
    <type>Text</type>
</CustomField>