force-app/main/default/objects/Service_Agreement__c/fields/CallSource_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CallSource_Account_ID__c</fullName>
    <label>CallSource Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>