force-app/main/default/objects/Service_Agreement__c/fields/CallSource_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>CallSource_Account_Status__c</fullName>
    <label>CallSource Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>