force-app/main/default/objects/Service_Agreement__c/fields/Cancellation_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Open_Date__c</fullName>
    <formula>Last_Opportunity__r.Cancellation_Open_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Open Date</label>
    <type>DateTime</type>
</CustomField>