force-app/main/default/objects/Service_Agreement__c/fields/Cancellation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Date__c</fullName>
    <formula>Last_Opportunity__r.Cancellation_Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Request Date</label>
    <type>Date</type>
</CustomField>