force-app/main/default/objects/Service_Agreement__c/fields/Car_Research__c.field-meta.xml
<CustomField>
    <fullName>Car_Research__c</fullName>
    <label>Car Research</label>
    <type>Url</type>
</CustomField>