force-app/main/default/objects/Service_Agreement__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <description>created for Launch team in Service Agreements</description>
    <label>Check In Date</label>
    <type>Date</type>
</CustomField>