force-app/main/default/objects/Service_Agreement__c/fields/Client_Age__c.field-meta.xml
<CustomField>
    <fullName>Client_Age__c</fullName>
    <formula>IF ( Customer_Age__c &gt; 0, 
TEXT(FLOOR( Customer_Age__c)) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * ( Customer_Age__c - FLOOR(Customer_Age__c) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ( Customer_Age__c - FLOOR(Customer_Age__c) ),8) - FLOOR( 
ROUND( 24 * ( Customer_Age__c - FLOOR(Customer_Age__c) ),8)) ),0)) &amp; &quot; min &quot; 
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Age</label>
    <type>Text</type>
</CustomField>