force-app/main/default/objects/Service_Agreement__c/fields/Client_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Client_Objectives__c</fullName>
    <description>Pulled from Opportunity - Documented by Sales</description>
    <inlineHelpText>Pulled from Opportunity - Documented by Sales</inlineHelpText>
    <label>Client Objectives</label>
    <type>TextArea</type>
</CustomField>