force-app/main/default/objects/Service_Agreement__c/fields/Client_Term__c.field-meta.xml
<CustomField>
    <fullName>Client_Term__c</fullName>
    <formula>Originating_Opportunity__r.Terms_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Term</label>
    <type>Text</type>
</CustomField>