force-app/main/default/objects/Service_Agreement__c/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <inlineHelpText>Must contain &quot;https&quot;, Example: https://callrevu.com</inlineHelpText>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>