force-app/main/default/objects/Service_Agreement__c/fields/Completed_Carrier_Registration__c.field-meta.xml
<CustomField>
    <fullName>Completed_Carrier_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completed Trusted Dealer Calling Registration - Requested and maintained by Matt Heher</description>
    <inlineHelpText>Completed Trusted Dealer Calling Registration</inlineHelpText>
    <label>Trusted Dealer Calling Completed</label>
    <type>Checkbox</type>
</CustomField>