force-app/main/default/objects/Service_Agreement__c/fields/Contract_Update_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Update_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://callrevu.lightning.force.com/lightning/apex/ContractUpdate?contractid=&quot; + Id + &quot;&amp;contactid=&quot; + Authorization_Contact__c,&quot;Click Here to Edit Contract Setup Information&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Update Link</label>
    <type>Text</type>
</CustomField>