force-app/main/default/objects/Service_Agreement__c/fields/COVID_19_Impact__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Impact__c</fullName>
    <label>COVID-19 Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High: Don’t know when I can pay/Can’t pay</fullName>
            </value>
            <value>
                <fullName>Medium: Slow Pay or Delayed</fullName>
            </value>
            <value>
                <fullName>Low: Paying on time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>