force-app/main/default/objects/Service_Agreement__c/fields/Create_Account__c.field-meta.xml
<CustomField>
    <fullName>Create_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Account</label>
    <type>Checkbox</type>
</CustomField>