force-app/main/default/objects/Service_Agreement__c/fields/Create_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Renewal_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Create Renewal Opportunity</inlineHelpText>
    <label>Create Renewal Opportunity</label>
    <type>Checkbox</type>
</CustomField>