force-app/main/default/objects/Service_Agreement__c/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <label>CRM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advent</fullName>
            </value>
            <value>
                <fullName>Arcadium (Partnered with CDK)</fullName>
            </value>
            <value>
                <fullName>AutoSoft</fullName>
            </value>
            <value>
                <fullName>CarResearch</fullName>
            </value>
            <value>
                <fullName>CDK</fullName>
            </value>
            <value>
                <fullName>Contact Management (Reynolds)</fullName>
            </value>
            <value>
                <fullName>CRM Suite</fullName>
                <label>CRM Suite (iMagic)</label>
            </value>
            <value>
                <fullName>D2C Media</fullName>
            </value>
            <value>
                <fullName>DealerMine</fullName>
            </value>
            <value>
                <fullName>DealerPeak</fullName>
            </value>
            <value>
                <fullName>DealerSocket</fullName>
            </value>
            <value>
                <fullName>Dominion (AutoBase CRMSuite)</fullName>
            </value>
            <value>
                <fullName>DriveCentric</fullName>
            </value>
            <value>
                <fullName>eLead1</fullName>
            </value>
            <value>
                <fullName>FourOneLabs</fullName>
            </value>
            <value>
                <fullName>HigherGear</fullName>
            </value>
            <value>
                <fullName>Interactive360</fullName>
            </value>
            <value>
                <fullName>LIS CRM</fullName>
            </value>
            <value>
                <fullName>Momentum</fullName>
            </value>
            <value>
                <fullName>Oplogic</fullName>
            </value>
            <value>
                <fullName>ProMax</fullName>
            </value>
            <value>
                <fullName>VinSolutions</fullName>
            </value>
            <value>
                <fullName>Votenza</fullName>
            </value>
            <value>
                <fullName>ZoHo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>