force-app/main/default/objects/Service_Agreement__c/fields/CRM_and_C2C_integrations_Requested__c.field-meta.xml
<CustomField>
    <fullName>CRM_and_C2C_integrations_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM and C2C integrations Requested</label>
    <type>Checkbox</type>
</CustomField>