force-app/main/default/objects/Service_Agreement__c/fields/CRM_Password__c.field-meta.xml
<CustomField>
    <fullName>CRM_Password__c</fullName>
    <label>CRM Password</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>